gateway-setup/deployment-patterns/ingress/ingress-to-ambient-mesh/multi-cluster/gloo-operator/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gloo-setup-test
spec:
  concurrent: false
  timeouts:
    exec: 180s
  steps:
  - try:
    - assert:
        resource:
          ($values.glooVersion != null): true
    - assert:
        resource:
          ($values.glooLicense != null): true
    - assert:
        resource:
          ($values.istioVersion != null): true
    - assert:
        resource:
          ($values.glooMeshVersion != null): true
    - assert:
        resource:
          ($values.glooMeshLicense != null): true
    - assert:
        resource:
          ($values.glooOperatorVersion != null): true
    - assert:
        resource:
          ($values.repoKey != null): true
  - try:
    - script:
        content: |
          bash scripts/preflight.sh
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        - name: ISTIO_VERSION
          value: ($values.istioVersion)
        - name: GLOO_MESH_VERSION
          value: ($values.glooMeshVersion)
        - name: GLOO_MESH_LICENSE_KEY
          value: ($values.glooMeshLicense)
        - name: GLOO_OPERATOR_VERSION
          value: ($values.glooOperatorVersion)
        - name: REPO_KEY
          value: ($values.repoKey)
        content: |
          bash scripts/setup-cluster1.sh
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: gloo
            namespace: gloo-system
          status:
            readyReplicas: 1
    - assert:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: Gateway 
          metadata:
            name: istio-eastwest
            namespace: istio-eastwest
          spec:
            gatewayClassName: istio-eastwest
  - clusters:
      k3d-cluster2:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster2
    cluster: k3d-cluster2
    try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        - name: ISTIO_VERSION
          value: ($values.istioVersion)
        - name: GLOO_MESH_VERSION
          value: ($values.glooMeshVersion)
        - name: GLOO_MESH_LICENSE_KEY
          value: ($values.glooMeshLicense)
        - name: GLOO_OPERATOR_VERSION
          value: ($values.glooOperatorVersion)
        - name: REPO_KEY
          value: ($values.repoKey)
        content: |
          bash scripts/setup-cluster2.sh
    - assert:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: Gateway 
          metadata:
            name: istio-eastwest
            namespace: istio-eastwest
          spec:
            gatewayClassName: istio-eastwest
  - cluster: k3d-cluster1
    try:
    - script:
        content: |
          bash scripts/link-cluster1.sh
  - cluster: k3d-cluster2
    try:
    - script:
        content: |
          bash scripts/link-cluster2.sh
  - cluster: k3d-cluster1
    try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        content: |
          bash scripts/bookinfo.sh
  - cluster: k3d-cluster2
    try:
    - script:
        content: |
          bash scripts/bookinfo.sh
  - cluster: k3d-cluster1
    try:
    - script:
        content: |
          bash scripts/gg-ingress.sh
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gloo-proxy-test
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: gloo-proxy-http
            namespace: gloo-system
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: httpbin-test
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: httpbin
            namespace: httpbin
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: netshoot-test
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: netshoot
            namespace: default
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: smoke-test-routing
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -i -w '%{http_code}' -o /dev/null -s http://gloo-proxy-http.gloo-system:8080/headers -H "Host: www.example.com"
        outputs:
        - name: statuscode
          value: ($stdout)
    - assert:
        resource:
          ($statuscode): "200"
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-ztunnel-capture
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - script:
        content: |
          kubectl logs daemonset/ztunnel -n istio-system | grep example.com | grep httpbin | tail -1 | grep -o "response_code\":200"
        outputs:
        - name: statuscode
          value: ($stdout)
    - assert:
        resource:
          ($statuscode): "response_code\":200\n"
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-productpage-to-ratings
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - script:
        content: |
          kubectl -n bookinfo debug -i pods/$(kubectl get pod -l app=productpage -A -o jsonpath='{.items[0].metadata.name}') --image=curlimages/curl -- curl -i -w '%{http_code}' -o /dev/null -s http://ratings:9080/ratings/1 | tail -1
        outputs:
        - name: statuscode
          value: ($stdout)
    - assert:
        resource:
          ($statuscode): "200"
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-productpage-ingress
spec:
  concurrent: false
  steps:
  - clusters:
      k3d-cluster1:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-cluster1
    cluster: k3d-cluster1
    try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -i -w '%{http_code}' -o /dev/null -s http://gloo-proxy-http.gloo-system:8080/productpage
        outputs:
        - name: statuscode
          value: ($stdout)
    - assert:
        resource:
          ($statuscode): "200"
